--- a/package.json
+++ b/package.json
@@ -64,11 +64,15 @@
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.2",
     "eslint-plugin-react-hooks": "4.6.0",
+    "msw": "1.2.1",
     "prettier": "2.8.8",
     "prop-types": "15.8.1",
     "react-app-rewired": "2.2.1",
     "storybook": "7.0.7",
     "styled-components": "5.3.10",
     "webpack": "5.80.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
