chore: interfaces 경로 추가

--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -3,7 +3,8 @@
       "baseUrl": ".",
       "paths": {
         "@components/*": ["./src/components/*"],
-        "@pages/*": ["./src/pages/*"]
+        "@pages/*": ["./src/pages/*"],
+        "@interfaces/*":["./src/interfaces/*"]
       }
   }
 }
