--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "16.18.25",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
+    "axios": "1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
+    "styled-reset": "4.4.6",
     "typescript": "4.9.5",
     "web-vitals": "2.1.4"
   },
@@ -70,6 +72,7 @@
     "react-app-rewired": "2.2.1",
     "storybook": "7.0.7",
     "styled-components": "5.3.10",
+    "tsconfig-paths-webpack-plugin": "4.0.1",
     "webpack": "5.80.0"
   },
   "msw": {
