--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "./tsconfig.paths.json",
   "compilerOptions": {
-    "target": "ES2015",
+    "target": "es2015",
     "lib": [
       "dom",
       "dom.iterable",
