--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "axios": "1.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "8.0.5",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
+    "redux": "4.2.1",
+    "redux-saga": "1.2.3",
     "styled-reset": "4.4.6",
     "typescript": "4.9.5",
     "web-vitals": "2.1.4"
