--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "18.2.1",
     "axios": "1.3.6",
     "react": "^18.2.0",
+    "react-daum-postcode": "3.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
