--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react": "^18.2.0",
     "react-daum-postcode": "3.1.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "7.44.1",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
+    "styled-components": "5.3.10",
     "styled-reset": "4.4.6",
     "typescript": "4.9.5",
     "web-vitals": "2.1.4"
@@ -72,7 +74,6 @@
     "prop-types": "15.8.1",
     "react-app-rewired": "2.2.1",
     "storybook": "7.0.7",
-    "styled-components": "5.3.10",
     "tsconfig-paths-webpack-plugin": "4.0.1",
     "webpack": "5.80.0"
   },
